--- a/forca.css
+++ b/forca.css
@@ -19,6 +19,7 @@ main {
 .gameContent {
     display: flex;
     flex-direction: column;
+    align-items: center;
     gap: 3em;
 }
 
@@ -67,6 +68,7 @@ main {
 #palavra {
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
     gap: 1.5em;
 
 }
@@ -82,6 +84,10 @@ main {
     border-radius: 5px;
 }
 
+#tema {
+    border-bottom: 2px solid black;
+}
+
 .hide {
     color: white;
     user-select: none;
@@ -89,6 +95,7 @@ main {
 
 .extra {
     display: flex;
+    flex-direction: row;
 }
 
 .letrasUsadas {
